--- a/templates/inference_vllm_mistral.yaml
+++ b/templates/inference_vllm_mistral.yaml
@@ -30,14 +30,21 @@ spec:
       gpu_memory_utilization: 0.9
       trust_remote_code: true
 
-  # Inference parameters and input prompts
+  # Data resource
+  data:
+    type: "dataset"
+    url: "openai/gsm8k"
+    name: "main"
+    split: "train[:1%]"
+    column: "question"
+    shuffle: true
+    seed: 42
+
+  # Inference parameters
   inference:
     max_tokens: 128
     temperature: 0.7
     top_p: 0.95
-    prompts:
-      - "Explain the theory of relativity in simple terms."
-      - "Write a short haiku about the ocean at sunrise."
 
   # Output configuration (current worker writes locally to RESULTS_DIR/<task_id>/responses.json)
   output:
