--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,29 @@
 [project]
 name = "mloc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Modular LLM Operations Container - Distributed system for LLM inference and training"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "datasets>=4.0.0",
     "fastapi>=0.116.1",
     "pyyaml>=6.0.2",
     "redis>=6.4.0",
     "requests>=2.32.5",
     "uvicorn>=0.35.0",
     "vllm>=0.10.1.1",
+]
+
+[project.optional-dependencies]
+ppo = [
+    "trl>=0.8.0",
+    "transformers>=4.36.0",
+    "torch>=2.0.0",
+    "datasets>=4.0.0",
+    "accelerate>=0.24.0",
+]
+dev = [
+    "pytest>=7.0.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "ruff>=0.1.0",
 ]
