--- a/worker/docker-compose.yml
+++ b/worker/docker-compose.yml
@@ -6,13 +6,13 @@ services:
     restart: unless-stopped
 
   mloc_worker:
-    image: mloc_worker:cuda12.6-py312
+    image: mloc_worker:gpu-latest
     depends_on: [redis]
     environment:
       TZ: Asia/Singapore
       LOG_LEVEL: INFO
       HEARTBEAT_INTERVAL_SEC: "30"
-      TASK_TOPICS: "tasks.inference,tasks.ppo,tasks.dpo"
+      TASK_TOPIC: "tasks"
       REDIS_URL: "redis://redis:6379/0"
     volumes:
       - ./results:/app/results
