--- a/worker/docker-compose.yml
+++ b/worker/docker-compose.yml
@@ -14,8 +14,9 @@ services:
       HEARTBEAT_INTERVAL_SEC: "30"
       TASK_TOPIC: "tasks"
       REDIS_URL: "redis://redis:6379/0"
+      RESULTS_DIR: "/mnt/mloc-results"
     volumes:
-      - ./results:/app/results
+      - results_share:/mnt/mloc-results
     restart: unless-stopped
     deploy:
       resources:
@@ -24,3 +25,11 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+
+volumes:
+  results_share:
+    driver: local
+    driver_opts:
+      type: "nfs"
+      o: "addr=${NFS_SERVER:-127.0.0.1},rw,nfsvers=${NFS_VERSION:-4},tcp"
+      device: ":${NFS_EXPORT_PATH:-/srv/mloc/results}"
