--- a/worker/requirements/requirements.txt
+++ b/worker/requirements/requirements.txt
@@ -1,3 +1,57 @@
-redis
-trl
-qdrant-client>=1.15.1
+# Core runtime
+redis==6.4.0
+pyyaml==6.0.2
+requests==2.32.5
+httpx==0.28.1
+python-dotenv==1.1.1
+colorlog==6.9.0
+colorama==0.4.6
+pydantic==2.11.7
+prompt-toolkit==3.0.52
+
+# ML stack
+torch==2.7.1
+transformers==4.56.1
+accelerate==1.10.1
+datasets==4.0.0
+trl==0.22.2
+qdrant-client==1.15.1
+tiktoken==0.11.0
+pymupdf==1.26.4
+pillow==11.3.0
+matplotlib==3.10.6
+ipython==9.5.0
+traitlets==5.14.3
+
+# Agent & tooling support
+aiohttp==3.12.15
+aiofiles==24.1.0
+arxiv==2.2.0
+chunkr-ai==0.3.7
+google-genai==1.36.0
+hydra-core==1.3.2
+omegaconf==2.3.0
+jinja2==3.1.6
+mcp==1.14.0
+openai==1.99.6
+openai-agents==0.2.8
+openinference-instrumentation-openai==0.1.32
+openinference-instrumentation-openai-agents==1.3.0
+opentelemetry-api==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-instrumentation==0.58b0
+opentelemetry-semantic-conventions==0.58b0
+arize-phoenix-client==1.18.2
+arize-phoenix-otel==0.13.1
+sqlmodel==0.0.24
+sqlalchemy==2.0.43
+psycopg2-binary==2.9.10
+pexpect==4.9.0
+pandas==2.3.2
+openpyxl==3.1.5
+wikipedia-api==0.8.1
+
+# Optional toolkits used by agent integrations
+beautifulsoup4>=4.12.3
+crawl4ai
+ddgs
