--- a/templates/sft_llama_1b.yaml
+++ b/templates/sft_llama_1b.yaml
@@ -23,31 +23,35 @@ spec:
   model:
     source:
       type: "huggingface"
-      identifier: "mistralai/Mistral-7B-Instruct-v0.3"
+      identifier: "meta-llama/Llama-3.2-1B-Instruct"
 
   data:
     dataset_name: "openai/gsm8k"
     config_name: "main"
-    split: "train[:1%]"
+    split: "train[:5%]"
     prompt_column: "question"
     response_column: "answer"
     separator: "\n\nAnswer: "
     max_samples: 200
 
   training:
-    num_train_epochs: 1
-    batch_size: 2
+    allow_multi_gpu: true
+    visible_devices: "0,2"
+    num_train_epochs: 2
+    batch_size: 4
     gradient_accumulation_steps: 4
     learning_rate: 5.0e-5
     max_seq_length: 512
     logging_steps: 5
     save_steps: 50
     save_model: true
+    gradient_checkpointing: false  # avoid attention-mask/entropy shape mismatch seen with some models
+    packing: false
 
   output:
     destination:
       type: "local"
-      path: "/mnt/mloc-results"
+      path: "./sft_llama_8b"
     artifacts:
       - "responses.json"
       - "final_model"
