feat: add agent executor with multi-source data support   - Support 4 data source types: static, list, dataset, graph_template   - Add HuggingFace dataset batch processing capability

--- a/worker/executors/agent/secrets.yaml.example
+++ b/worker/executors/agent/secrets.yaml.example
@@ -38,6 +38,12 @@ SERPER_API_KEY: "your-serper-api-key"
 JINA_API_KEY: "your-jina-api-key"
 
 # =============================================
+# Database Configuration
+# =============================================
+# SQLite database for agent tracing and logs
+DB_URL: "sqlite:///./results/agent.db"
+
+# =============================================
 # Tracing Configuration (optional)
 # =============================================
 # Phoenix tracing for debugging
