--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,4 +54,5 @@ dependencies = [
     "arize-phoenix-client>=1.14.1",
     "arize-phoenix-otel>=0.11.0",
     "peft>=0.17.1",
+    "deepspeed>=0.17.6",
 ]
