--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "uvicorn>=0.35.0",
     "vllm>=0.10.1.1",
     "datasets>=4.0.0",
-    "trl>=0.8.0",
+    "trl==0.23.0",
     "qdrant-client>=1.15.1",
     "fastembed>=0.7.3",
     # Agent Framework Dependencies (from youtu-agent)
@@ -54,5 +54,4 @@ dependencies = [
     "arize-phoenix-client>=1.14.1",
     "arize-phoenix-otel>=0.11.0",
     "peft>=0.17.1",
-    "deepspeed>=0.17.6",
 ]
