--- a/exp/02_inference_multi_stage.yaml
+++ b/exp/02_inference_multi_stage.yaml
@@ -8,7 +8,15 @@ metadata:
 
 spec:
   taskType: "inference"
-
+  resources:
+    replicas: 1
+    hardware:
+      cpu: "16"
+      memory: "64Gi"
+      gpu:
+        type: "any"
+        count: 2
+        
   data:
     type: "dataset"
     url: "openai/gsm8k"
@@ -27,6 +35,7 @@ spec:
     - name: "draft-solver"
       spec:
         resources:
+          replicas: 1
           hardware:
             cpu: "16"
             memory: "64Gi"
@@ -36,7 +45,7 @@ spec:
         model:
           source:
             type: "huggingface"
-            identifier: "meta-llama/Meta-Llama-3.1-8B-Instruct"
+            identifier: "meta-llama/Llama-3.1-8B-Instruct"
             revision: "main"
           vllm:
             tensor_parallel_size: 2
@@ -49,8 +58,8 @@ spec:
           top_p: 0.9
         output:
           destination:
-            type: "local"
-            path: "/ignored/by/current-worker"
+            type: "http"
+            url: "http://localhost:8000/api/v1/results"
           artifacts:
             - "responses.json"
             - "logs"
@@ -58,6 +67,7 @@ spec:
     - name: "refine-explainer"
       spec:
         resources:
+          replicas: 1
           hardware:
             cpu: "16"
             memory: "64Gi"
@@ -67,7 +77,7 @@ spec:
         model:
           source:
             type: "huggingface"
-            identifier: "meta-llama/Meta-Llama-3.1-8B-Instruct"
+            identifier: "meta-llama/Llama-3.1-8B-Instruct"
             revision: "main"
           vllm:
             tensor_parallel_size: 2
@@ -80,8 +90,8 @@ spec:
           top_p: 0.85
         output:
           destination:
-            type: "local"
-            path: "/ignored/by/current-worker"
+            type: "http"
+            url: "http://localhost:8000/api/v1/results"
           artifacts:
             - "responses.json"
             - "logs"
@@ -111,8 +121,8 @@ spec:
           top_p: 0.8
         output:
           destination:
-            type: "local"
-            path: "./runs/02_inference_multi_stage"
+            type: "http"
+            url: "http://localhost:8000/api/v1/results"
           artifacts:
             - "responses.json"
             - "logs"
