--- a/exp/03_inference_dag.yaml
+++ b/exp/03_inference_dag.yaml
@@ -25,12 +25,20 @@ spec:
   model:
     source:
       type: "huggingface"
-      identifier: "meta-llama/Meta-Llama-3.1-8B-Instruct"
+      identifier: "meta-llama/Llama-3.1-8B-Instruct"
       revision: "main"
     vllm:
       tensor_parallel_size: 2
       gpu_memory_utilization: 0.9
       trust_remote_code: true
+
+  output:
+    destination:
+      type: "http"
+      url: "http://localhost:8000/api/v1/results"
+    artifacts:
+      - "responses.json"
+      - "logs"
 
   graph:
     nodes:
@@ -43,8 +51,7 @@ spec:
             name: "main"
             split: "train[:100]"
             column: "question"
-            shuffle: true
-            seed: 21
+            shuffle: false
           inference:
             system_prompt: |
               Produce a high-level reasoning outline before answering the math problem.
@@ -58,12 +65,12 @@ spec:
             type: "dataset"
             url: "openai/gsm8k"
             name: "main"
-            split: "train[100:200]"
+            split: "train[:100]"
             column: "question"
             shuffle: false
           inference:
             system_prompt: |
-              Solve the math question directly and return the final numeric answer.
+              Verify the draft solution for the same problem and report a concise numeric answer with confidence.
             max_tokens: 128
             temperature: 0.15
             top_p: 0.85
@@ -78,22 +85,19 @@ spec:
             template:
               name: "two_column_briefing"
               columns:
-                - label: "outline"
-                  node: "branch-a"
-                  path: "result.items[*].output"
-                - label: "answer"
-                  node: "branch-b"
-                  path: "result.items[*].output"
+                - label: "Reasoning drafts"
+                  expr: "branch-a.result.items"
+                - label: "Direct answers"
+                  expr: "branch-b.result.items"
+              options:
+                intro:
+                  - "You are reviewing two inference passes run on the same 100 GSM8K questions."
+                  - "Column A contains structured reasoning drafts; Column B contains verified final answers."
+                closing:
+                  - "Compare the approaches, flag any mismatched answers, and produce guidance for a unified response style."
           inference:
             system_prompt: |
               Combine the outline and direct answer into a structured explanation with a final answer.
             max_tokens: 256
             temperature: 0.2
             top_p: 0.85
-          output:
-            destination:
-              type: "local"
-              path: "./runs/03_inference_dag"
-            artifacts:
-              - "responses.json"
-              - "logs"
