--- a/templates/sft_llama_1b.yaml
+++ b/templates/sft_llama_1b.yaml
@@ -7,6 +7,9 @@ apiVersion: mloc/v1
 kind: SFTTask
 metadata:
   name: gpt2-sft-demo
+  owner: research
+  annotations:
+    description: "Supervised fine-tuning demo using TRL SFTExecutor"
 
 spec:
   taskType: "sft"
@@ -15,7 +18,7 @@ spec:
     replicas: 1
     hardware:
       cpu: "8"
-      memory: "32GiB"
+      memory: "32Gi"
       gpu:
         count: 1
         type: "any"
@@ -53,4 +56,5 @@ spec:
       path: "./sft_llama_1b"
     artifacts:
       - "responses.json"
-      - "final_model"
+      - "logs"
+      - "artifacts/checkpoints"
