--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
+    "pytest>=8.4.2",
     "pyyaml>=6.0.2",
     "redis>=6.4.0",
     "requests>=2.32.5",
