--- a/exp/11_lora_sft_plus_inference.yaml
+++ b/exp/11_lora_sft_plus_inference.yaml
@@ -27,6 +27,7 @@ spec:
   stages:
     - name: lora-train
       spec:
+        taskType: "lora_sft"
         lora:
           r: 16
           alpha: 32
