--- a/exp/02_inference_multi_stage.yaml
+++ b/exp/02_inference_multi_stage.yaml
@@ -8,6 +8,7 @@ metadata:
 
 spec:
   taskType: "inference"
+
   resources:
     replicas: 1
     hardware:
@@ -16,7 +17,7 @@ spec:
       gpu:
         type: "any"
         count: 1
-        
+
   data:
     type: "dataset"
     url: "openai/gsm8k"
@@ -35,6 +36,7 @@ spec:
     - name: "draft-solver"
       spec:
         taskType: "inference"
+
         resources:
           replicas: 1
           hardware:
@@ -43,6 +45,7 @@ spec:
             gpu:
               type: "any"
               count: 1
+
         model:
           source:
             type: "huggingface"
@@ -51,11 +54,13 @@ spec:
           vllm:
             gpu_memory_utilization: 0.9
             trust_remote_code: true
+
         inference:
           system_prompt: |
             Solve the math problem carefully. Produce a structured draft with labeled steps.
           temperature: 0.3
           top_p: 0.9
+
         output:
           destination:
             type: "http"
@@ -67,6 +72,7 @@ spec:
     - name: "refine-explainer"
       spec:
         taskType: "inference"
+
         resources:
           replicas: 1
           hardware:
@@ -75,6 +81,7 @@ spec:
             gpu:
               type: "any"
               count: 2
+
         model:
           source:
             type: "huggingface"
@@ -83,11 +90,13 @@ spec:
           vllm:
             gpu_memory_utilization: 0.9
             trust_remote_code: true
+
         inference:
           system_prompt: |
             Improve the draft so it is concise, accurate, and easy to follow. Preserve the final answer.
           temperature: 0.2
           top_p: 0.85
+
         output:
           destination:
             type: "http"
@@ -99,13 +108,16 @@ spec:
     - name: "json-formatter"
       spec:
         taskType: "inference"
+
         resources:
+          replicas: 1
           hardware:
             cpu: "16"
             memory: "64Gi"
             gpu:
               type: "any"
               count: 2
+
         model:
           source:
             type: "huggingface"
@@ -114,11 +126,13 @@ spec:
           vllm:
             gpu_memory_utilization: 0.9
             trust_remote_code: true
+
         inference:
           system_prompt: |
             Rewrite the refined solution as strict JSON with fields question, answer, rationale, confidence (0-1).
           temperature: 0.1
           top_p: 0.8
+
         output:
           destination:
             type: "http"
