--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "pytest>=8.4.2",
+    "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "redis>=6.4.0",
     "requests>=2.32.5",
