fix bug in tqa dataset

--- a/exp/composite_llama1b/01_3_multi_dataset_liner_inference.yaml
+++ b/exp/composite_llama1b/01_3_multi_dataset_liner_inference.yaml
@@ -67,6 +67,7 @@ spec:
         data:
           type: "dataset"
           url: "truthfulqa/truthful_qa"
+          name: "generation"
           split: "validation[:150]"
           column: "question"
           shuffle: true
